--- a/src/projStyles.css
+++ b/src/projStyles.css
@@ -1,19 +1,52 @@
 
 .title {
+    -fx-text-fill: rgb(49, 44, 56);
 	-fx-font-size: 20px;
+	-fx-font-weight: bold;
+	-fx-font-family: "Arial";
 }
 
+.subtitle {
+    -fx-text-fill: rgb(183, 28, 28);
+    -fx-font-size: 16px;
+    -fx-font-family: "Arial";
+    -fx-font-weight: bold;
+}
+
+
 .buttons {
-	-fx-background-color: rgb(183, 28, 28);
-	-fx-padding: 8 15 8 15;
+	-fx-background-color:  rgb(183, 28, 28);
+	-fx-padding: 8 20 8 20;
 	-fx-background-insets: 0,1,2;
     -fx-background-radius: 4,2,1;
     -fx-text-fill: white;
     -fx-font-size: 14px;
     -fx-alignment: center;
+    -fx-font-weight: bold;
+     -fx-font-family: "Arial";
+
+}
+.buttons2 {
+	-fx-border-color: rgb(183, 28, 28);
+	-fx-border-width: 2;
+	-fx-border-radius: 4px;
+	-fx-padding: 6 13 6 13;
+	-fx-background-insets: 0,1,2;
+    -fx-background-radius: 4,2,1;
+    -fx-text-fill: rgb(183, 28, 28);
+    -fx-font-size: 14px;
+    -fx-alignment: center;
+    -fx-font-weight: bold;
+     -fx-font-family: "Arial";
 
 }
 
+
+
 .buttons:hover{
- -fx-background-color: rgb(173, 18, 18);
+ -fx-background-color: rgb(203, 48, 48);
+}
+
+.buttons2:hover{
+ -fx-background-color: rgb(255, 235, 238);
 }
